--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "virtual-online-product",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,15 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Rakeshgodumala/Virtual-Online-Product.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Rakeshgodumala/Virtual-Online-Product/issues"
+  },
+  "homepage": "https://github.com/Rakeshgodumala/Virtual-Online-Product#readme",
+  "description": ""
 }
