--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.8.1"
+    "bootstrap-icons": "^1.8.1",
+    "git": "^0.1.5"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,5 @@
     "url": "https://github.com/Rakeshgodumala/Virtual-Online-Product/issues"
   },
   "homepage": "https://github.com/Rakeshgodumala/Virtual-Online-Product#readme",
-  "devDependencies": {},
   "description": ""
 }
