--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
-    "git": "^0.1.5"
+    "git": "^0.1.3"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,6 @@
     "url": "https://github.com/Rakeshgodumala/Virtual-Online-Product/issues"
   },
   "homepage": "https://github.com/Rakeshgodumala/Virtual-Online-Product#readme",
+  "devDependencies": {},
   "description": ""
 }
