online shopping edit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "virtual-online-product",
+  "name": "online shopping app",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
